--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,10 @@
         <version>9</version>
     </parent>
 
+    <groupId>io.vertx</groupId>
     <artifactId>vertx-kotlin-common</artifactId>
 
-    <version>1.0-SNAPSHOT</version>
+    <version>3.4.0-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <modules>
