--- a/vertx-kotlin-common-compiler/pom.xml
+++ b/vertx-kotlin-common-compiler/pom.xml
@@ -5,11 +5,13 @@
     <parent>
         <artifactId>vertx-kotlin-common</artifactId>
         <groupId>io.vertx</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>3.4.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>io.vertx</groupId>
     <artifactId>vertx-kotlin-common-compiler</artifactId>
+    <version>3.4.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
